DI ClassUtil mostly